tests/sksl/errors/OverflowFloatLiteral.dsl.glsl
### Compilation failed:

error: floating-point value is too large: 3.41e+38
1 error
